# ckSCADA

./: .gitignore  Makefile  README.md  index.md  make.bat  pyproject.toml
.github/workflows/: node.js.yml  npm_admin_server.yml  python-app.yml
ckscada-client/: Makefile  main.js  package-lock.json  package.json
ckscada-client/src/: ckviewer.js
ckscada-server/admin-client/: Makefile  package-lock.json  package.json
ckscada-server/admin-client/src/: App.css  App.js  BackendComms.js  ClientListComponent.js  DeviceListComponent.js  GroupListComponent.js  ObjectListComponent.js  ObjectListModal.js  PointListComponent.js  TopicListComponent.js  common.js  structure.js  test.js
ckscada-server/admin-server/src/: ckadmincommon.py  points.py
ckscada-server/config/: config.json
ckscada-server/server/: Makefile  package-lock.json  package.json  requirements.txt
ckscada-server/server/src/: change.sh  ck-create-config.js  ck-create-device.js  ck-get-config.js  ckagent.py  ckagentdevice.py  load_test.sh  project.sh  simulate_load_test.js  simulate_plant.sh  test.sh
ckscada-server/server/test/: test-init.sh
ckscada/adminclient/: Makefile  webpack.config.js
ckscada/adminclient/public/: index.html
ckscada/adminclient/src/: DeviceListComponent.js  GroupListComponent.js  common.js  index.js
ckscada/adminserver/: Makefile
ckscada/adminserver/src/: ckadminserver.py
ckscada/client/: index.html
ckscada/config/: config.json
ckscada/server/: Makefile  package-lock.json
docs/: index.md  requirements.txt
docs/source/: conf.py  index.rst
(+31 files in other folders)
